Fixed some pesky CSS causing overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -135,7 +135,7 @@ body{
 .fonts-container{
     border-radius: 1rem;
     margin-top: 16px;
-    max-width: 80%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
